# LLM_summary

./: .gitignore  README.md
train_RAG/: README.md  pyproject.toml  rag.ipynb  train_RAG.py
