[project]
name = "train-rag"
version = "0.1.0"
description = "RAG training project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "jieba>=0.42.1",
    "faiss-cpu>=1.7.4",
    "langchain-huggingface>=0.0.1",
    "rank-bm25>=0.2.2",
    "langchain-openai>=0.0.2",
    "ipykernel>=6.29.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
